# localcore-gateway

./: .gitignore  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  configuration.md  connecting-agents.md  lambda-handlers.md
examples/: config.yaml  handlers.py  math_handlers.py  strands_agent.py
src/localcore_gateway/: __init__.py  __main__.py  app.py  auth.py  config.py  gateway.py
src/localcore_gateway/lambda_emu/: __init__.py  _worker.py  base.py  context.py  native.py  sam.py
src/localcore_gateway/targets/: __init__.py  base.py  lambda_target.py  openapi_target.py
tests/: conftest.py  test_cli.py  test_gateway.py  test_lambda_context.py  test_native_features.py  test_native_lambda.py  test_openapi_target.py  test_sam_backend.py
