[project]
name = "localcore-gateway"
version = "0.1.0"
description = "Local, faithful-enough reimplementation of AWS Bedrock AgentCore Gateway, with a pluggable local Lambda backend."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
keywords = [
    "aws", "bedrock", "agentcore", "gateway", "mcp",
    "model-context-protocol", "lambda", "local", "emulator", "agents",
]
# No "License ::" classifier: PEP 639 SPDX `license` is used instead.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # MCP server + gateway aggregation surface (do NOT hand-roll JSON-RPC).
    # Pinned: FastMCP 3.x API moves fast.
    "fastmcp>=3.2,<3.3",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.scripts]
lcgw = "localcore_gateway.__main__:main"

# NOTE: confirm the GitHub slug matches the repo (and the PyPI Trusted
# Publisher form + the README CI badge).
[project.urls]
Homepage = "https://github.com/tawAsh1/localcore-gateway"
Repository = "https://github.com/tawAsh1/localcore-gateway"
Issues = "https://github.com/tawAsh1/localcore-gateway/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localcore_gateway"]

[tool.uv]
# Supply-chain: ignore releases newer than this date when resolving, so a
# freshly-published (possibly compromised) version gets a quarantine window.
# Fixed date (uv does not roll automatically); bump it forward periodically.
# Set ~7 days back from 2026-05-16.
exclude-newer = "2026-05-09T00:00:00Z"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

# "ALL" minus a curated denylist. Viable because ruff is locked (uv.lock +
# exclude-newer): new rules only appear on a deliberate ruff bump, which is a
# planned "triage new lints" event -- not random CI breakage. Every ignore
# below is evidence-based (seen in output) with a reason.
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- conflicts with the ruff formatter (ruff's own recommendation) ---
    "COM812", "ISC001",
    # --- opinionated / high-noise families we deliberately opt out of ---
    "D",        # pydocstyle: no full docstring-coverage policy
    "ANN",      # we don't annotate every arg/return (incl. tests)
    "EM",       # exception message string-literal churn
    "TRY003",   # descriptive messages on builtin exceptions are fine here
    "FBT",      # boolean-trap: flags legit bool config fields/kwargs
    "CPY",      # no per-file copyright header (deliberate; see NOTICE)
    "TD", "FIX",  # we don't police TODO/FIXME formatting
    # --- complexity metrics: judgment calls, not mechanical defects ---
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "C901",
    # --- intentional lazy/deferred imports throughout: CLI startup cost,
    #     optional deps (resource), base<->native/sam circular import
    #     avoidance. Moving these to top-level would regress. ---
    "PLC0415",
    # --- flake8-type-checking: pydantic/FastMCP resolve annotations at
    #     RUNTIME (model field types). Gating those imports behind
    #     TYPE_CHECKING causes runtime NameError; import-cost saving is
    #     negligible here. ---
    "TC001", "TC002", "TC003",
]

[tool.ruff.lint.per-file-ignores]
# CLI: printing to stdout/stderr is the command's purpose.
"src/localcore_gateway/__main__.py" = ["T201"]
# examples/ is illustrative Lambda code loaded by path, intentionally NOT a
# package (no __init__), and may print.
"examples/**" = ["T201", "INP001"]
# Tests legitimately use `assert` and may poke internals.
"tests/**" = ["S101", "SLF001"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
